kustomize/overlays/uat/deployment_patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resourcetracking-deployment
  labels:
    app: resourcetracking-deployment
spec:
  selector:
    matchLabels:
      app: resourcetracking-deployment
  template:
    metadata:
      labels:
        app: resourcetracking-deployment
    spec:
      containers:
      - name: resourcetracking
        imagePullPolicy: Always
