kustomize/overlays/uat/deployment_uat_patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resourcetracking-deployment
  labels:
    app: resourcetracking-uat
spec:
  selector:
    matchLabels:
      app: resourcetracking-uat
  template:
    metadata:
      labels:
        app: resourcetracking-uat
    spec:
      containers:
      - name: resourcetracking
        image: ghcr.io/dbca-wa/resource_tracking:latest
        imagePullPolicy: Always
