kustomize/overlays/uat/valkey_patch.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resourcetracking-valkey
spec:
  template:
    spec:
      containers:
        - name: resourcetracking-valkey
          volumeMounts:
            - name: valkey-config
              mountPath: /etc/valkey
              readOnly: true
      imagePullSecrets:
        - name: dhi-registry-secret-uat
      volumes:
        - name: valkey-config
          configMap:
            name: valkey-configmap-uat
            optional: false
