kustomize/overlays/uat/geoserver_service_patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: resourcetracking-geoserver-clusterip
spec:
  selector:
    app: resourcetracking-geoserver-uat
    variant: uat
