kustomize/overlays/uat/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: resourcetracking
spec:
  type: ClusterIP
  clusterIP: None
  ports:
  - name: default
    port: 42
    protocol: TCP
    targetPort: 42
  selector:
    app: resourcetracking-uat
---
apiVersion: v1
kind: Service
metadata:
  name: ingress-resourcetracking
spec:
  type: ClusterIP
  ports:
  - name: wsgi
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: resourcetracking-uat
---
apiVersion: v1
kind: Service
metadata:
  name: resourcetracking-db
spec:
  type: ClusterIP
  clusterIP: None
  ports:
  - name: default
    port: 42
    protocol: TCP
    targetPort: 42
  selector:
    workloadselector: resourcetracking-db-uat
