kustomize/overlays/uat/service_patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: resourcetracking-clusterip
spec:
  type: ClusterIP
  selector:
    app: resourcetracking-deployment
    variant: uat
---
apiVersion: v1
kind: Service
metadata:
  name: resourcetracking-valkey
spec:
  selector:
    app: resourcetracking-valkey
    variant: uat
