kustomize/overlays/uat/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: resourcetracking-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: resourcetracking-uat.dbca.wa.gov.au
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: resourcetracking-clusterip-uat
                port:
                  number: 8080
